# KatoML

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: test.yml
examples/: CMakeLists.txt  common.hpp
examples/helloworld/: CMakeLists.txt  main.cpp
examples/mnist/: CMakeLists.txt  main.cpp
examples/mnist_dnn/: CMakeLists.txt  main.cpp
examples/mnist_dnn_network_api/: CMakeLists.txt  main.cpp
experiments/mnist/: mnist_digits.py
experiments/rl/dqn/: taxi-yuzu.ipynb
experiments/tests/: simple_softmax.py
experiments/tests/ops/: div.py  exp.py  matmul.py  reduce_mean.py  reduce_sum.py  softmax.py
src/katoml/: CMakeLists.txt  pybind.cpp
src/katoml/mlapp/: CMakeLists.txt  mlapp.cpp  mlapp.hpp  mnist_loader.hpp
src/katoml/mlcompiler/: CMakeLists.txt  device.hpp  errors.hpp  mlcompiler.cpp  tensor.hpp
src/katoml/mlcompiler/engine/: engine.hpp
src/katoml/mlcompiler/engine/interp/: interp.hpp
src/katoml/mlcompiler/graph/: graph.hpp  operators.inc
src/katoml/mlcompiler/ir/: builder.hpp  ir.hpp  ir.inc  ir_def.inc  node.hpp  print_visitor.hpp  types.hpp  value.hpp  var.hpp  visitor.hpp
src/katoml/mlcompiler/ir/pass/: optimizer.hpp
src/katoml/mlcompiler/utils/: format.hpp  string_utils.hpp
src/katoml/mlsupport/: CMakeLists.txt  errors.hpp  format.hpp  mlsupport.cpp  mlsupport.hpp  string_utils.hpp
src/katoml/mltensor/: CMakeLists.txt  core.hpp  cpu_backend.hpp  (+8 more)
src/yuzu/: setup.py
tests/: CMakeLists.txt  common.hpp
tests/mlapp/: CMakeLists.txt  network.cpp
tests/mlcompiler/: CMakeLists.txt  interp.cpp  optimizer.cpp
tests/mltensor/: CMakeLists.txt  basic.cpp
(+26 files in other folders)
